Upgrading toList() method of Collectors